| Summary: | ASTERISK-26321: ARI : Add reason answered_elsewhere to channel hangup | ||
| Reporter: | Jean Aunis - Prescom (PrescomJA) | Labels: | |
| Date Opened: | 2016-08-29 05:52:45 | Date Closed: | 2016-09-19 16:36:37 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari_channels |
| Versions: | 13.10.0 14.0.0-beta1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | It would be useful to have a new hangup reason "answered_elsewhere" when hanging up a channel with ARI. This would allow to transmit the SIP header "Reason" when required (in this case : Reason: SIP;cause=200;text="Call completed elsewhere").
If you are ok with that, I can submit a patch on gerrit. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-08-29 05:52:46.658-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua C. Colp (jcolp) 2016-08-30 05:12:39.660-0500 I think that functionality would be a welcome addition. By: Jean Aunis - Prescom (PrescomJA) 2016-08-31 05:43:28.271-0500 I have submitted it on gerrit: https://gerrit.asterisk.org/#/c/3767/ By: Rusty Newton (rnewton) 2016-09-01 07:46:08.478-0500 Thanks! | ||